--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
     </script>
 
     <script src="https://kit.fontawesome.com/6d924de170.js" crossorigin="anonymous"></script>
-
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -31,7 +28,7 @@
     </style>
 </head>
 <body class="manrope">
-    <header class="lg:w-5/6 mx-auto text-center">
+    <header class="lg:w-5/6 mx-auto text-center mb-24">
         <nav class="flex gap-14 justify-center mt-5 mb-5">
             <div class="flex mx-auto">
                 <i class="fa-solid fa-arrow-right bg-green-400 rounded-full mx-2 px-2 py-2 -rotate-45 text-black"></i>
@@ -44,20 +41,104 @@
               <li class="text-gray-400">Blog</li>
               <li class="text-gray-400">Contact Us</li>
             </ul>
-            <div class="flex gap-6 mx-auto items-center">
+            <div class="flex gap-6 mx-auto text-center items-center">
               <i class="fa-solid fa-magnifying-glass bg-white rounded-full"></i>
               <i class="fa-solid fa-cart-shopping"></i>
-              <button class="bg-green-500 text-center px-2 py-1 font-bold flex rounded-2xl mx-auto ">
+              <button class="bg-green-300 text-center px-2 py-1 font-bold flex rounded-2xl mx-auto items-center gap-2">
                 <p class="text-black">Book Consult</p>
-                <i class="fa-solid fa-arrow-right bg-black rounded-full -rotate-45"></i>
+                <i class="fa-solid fa-arrow-right bg-black text-white rounded-full -rotate-45"></i>
               </button>
             </div>
         </nav>
-
+        <div class="justify-center py-4">
+          <img src="./assets/banner.png" class="items-center py-4 mx-auto" alt="">
+          <h1 class="text-center py-2 font-black lg:text-5xl md:text-3xl "> A barn house of this design has a <br> striking appearance</h1>
+          <p class="text-gray-300 text-center py-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal <br> accents, and large windows that flood the space with natural light.</p>
+          <button class="bg-green-300 text-center px-2 font-bold flex rounded-2xl mx-auto  items-center gap-2">
+            <p class="text-black">View Details</p>
+            <i class="fa-solid fa-arrow-right bg-green-400 rounded-full px-2 py-2 -rotate-45 text-black"></i>
+          </button>
+        </div>
     </header>
 
-    <main>
+    <main class=" bg-gray-200 mx-auto">
+      <section class="w-5/6 mx-auto mb-10">
+        <div class="my-4">
+          <img src="./assets/Vector.png" class="lg:visible" alt="">
+          <button class="flex items-center bg-white rounded-xl mx-24 -my-4">
+            <i class="fa-solid fa-arrow-right rounded-full mx-1 px-2 py-2  text-black"></i>
+            <p class="bg-white mx-2 font-bold">About Us </p>
+          </button>
+        </div>
+        <div class="lg:flex mx-auto my-auto items-center">
+          <div class="mx-auto">
+            <h1 class="font-black text-left text-black text-3xl my-4">We design thoughtful, <br> liveable spaces</h1>
+            <p class="text-left font-semibold mb-6">The barn house captivates with its blend of rustic charm and <br> modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <div class="flex items-center gap-8 rounded-lg bg-white py-5 mb-8">
+              <img class="mx-2" src="./assets/commercial.png" alt="">
+              <div>
+              <h3 class="font-bold text-left text-lg">Commercial</h3>
+              <p class="text-gray-300 text-left">The barn house captivates with its blend <br> of rustic charm and modern.</p>
+              </div>
+            </div>
+            <div class="flex items-center gap-8 rounded-lg bg-white py-5 mb-4">
+              <img class="mx-2" src="./assets/residential.png" alt="">
+              <div>
+              <h3 class="font-bold text-left text-lg">Residential</h3>
+              <p class="text-gray-300 text-left">The barn house captivates with its blend <br> of rustic charm and modern.</p>
+              </div>
+            </div>
+          </div>
 
+          <div class="mx-auto">
+            <img src="./assets/Rectangle.png" alt="">
+          </div>
+        </div>
+      </section>
+
+      <section class="w-5/6 mx-auto mb-10" >
+        <div class="items-center mb-4 py-4">
+          <button class="flex items-center bg-white rounded-xl mx-auto">
+            <i class="fa-solid fa-arrow-right rounded-full mx-1 px-2 py-2  text-black"></i>
+            <p class="bg-white mx-2 font-bold">How We Work</p>
+          </button>
+          <h1 class="text-4xl font-black text-center mx-auto py-4">Our Work Process</h1>
+          <p class="text-center mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+        </div>
+
+        <div class="lg:flex mx-auto justify-evenly">
+          <div class="items-center px-4 bg-[#E7C1D3] rounded-lg gap-2">
+            <img src="./assets/concept.png" class="py-2" alt="">
+            <div class="py-4">
+              <h2 class="text-left font-bold text-lg">Concept</h2>
+              <p class="text-left">The barn house captivates <br> with its blend of rustic charm <br> and modern.</p>
+            </div>
+          </div>
+
+          <div class="items-center px-4 bg-[#EFDA6E] rounded-lg gap-2">
+            <img src="./assets/flow-chart.png" class="py-2" alt="">
+            <div class="py-4">
+              <h2 class="text-left font-bold text-lg">Design Process</h2>
+              <p class="text-left">The barn house captivates <br> with its blend of rustic charm <br> and modern.</p>
+            </div>
+          </div>
+
+          <div class="items-center px-4 bg-[#A4DAC3] rounded-lg gap-2">
+            <img src="./assets/vision.png" class="py-2" alt="">
+            <div class="py-4">
+              <h2 class="text-left font-bold text-lg">Supervision</h2>
+              <p class="text-left">The barn house captivates <br> with its blend of rustic charm <br> and modern.</p>
+            </div>
+          </div>
+          <div class="items-center px-4 bg-[#77AAEA] rounded-lg gap-2">
+            <img src="./assets/budget-planning.png" class="py-2" alt="">
+            <div class="py-4">
+              <h2 class="text-left font-bold text-lg">Budget Planning</h2>
+              <p class="text-left">The barn house captivates <br> with its blend of rustic charm <br> and modern.</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
