--- a/index.html
+++ b/index.html
@@ -139,6 +139,37 @@
           </div>
         </div>
       </section>
+
+      <section>
+        <div class="bg-cover" style="background-image: url('./assets/bg.jpg'); height: 900px;">
+          <button class="bg-[#ABEF5F33] text-center px-2 py-1 font-bold flex rounded-2xl mx-auto items-center gap-2 my-4">
+            <i class="fa-solid fa-arrow-right text-black rounded-full "></i>
+            <p class="text-black">Let's Connect</p>
+          </button>
+
+          <h1 class="font-extrabold text-4xl text-center py-4">Let's Discuss Next Project</h1>
+          <p class="text-center py-4">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+
+          <div class="grid grid-cols-2 grid-rows-5 items-center mx-auto">
+
+            <div class="grid grid-cols-1 text-center rounded-lg">
+              <input class="rounded-lg mx-auto" type="text" placeholder="First Name*">
+            </div>
+            <div class="grid grid-cols-1 text-center rounded-lg">
+              <input class="rounded-lg mx-auto" type="text" placeholder="Last name*">
+            </div>
+            <div class="grid grid-cols-1  text-center rounded-lg">
+              <input class="rounded-lg mx-auto" type="text" placeholder="Phone Number*">
+            </div>
+            <div class="grid grid-cols-1  text-center rounded-lg" >
+              <input class="rounded-lg mx-auto" type="text" placeholder="Email:*">
+            </div>
+            <div class="grid grid-rows-3 text-center rounded-lg">
+              <input class="rounded-lg mx-auto" type="text" placeholder="Write Your Message here">
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
