--- a/index.html
+++ b/index.html
@@ -141,6 +141,54 @@
         </div>
       </section>
 
+      <section class=" mx-auto mb-10 bg-white">
+        <button class="bg-green-200 text-center px-2 py-1 font-bold flex rounded-2xl mx-auto items-center gap-2 my-4">
+          <i class="fa-solid fa-arrow-right text-black rounded-full "></i>
+          <p class="text-black">Explore Our Latest Works</p>
+        </button>
+        <div>
+          <h1 class="text-4xl font-black text-center mx-auto py-4">Our Latest Portfolio</h1>
+          <p class="text-center">
+            The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+      <div class="w-5/6 flex max-sm:flex-col mb-4 max-sm:mx-auto">
+       <div class="w-3/4 flex justify-center items-center shadow-lg rounded-lg max-sm:flex-col space-y-4 max-sm:mx-auto">
+        <img src="./assets/img1.png" alt="">
+        <div >
+          <h1 class="font-bold text-left pl-4">Commercial</h1>
+          <p class="text-left pl-4"> The barn house captivates with its blend of rustic charm <br> and modern. The barn house captivates with its blend of <br> rustic charm and modern .</p>
+          <button class="bg-neutral-50 text-left px-2 font-bold flex rounded-2xl items-center gap-2 justify-start">
+            <p class="text-black pl-2">View Details</p>
+            <i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full px-2 py-2 -rotate-45 text-black"></i>
+          </button>
+        </div>
+       </div>
+       <div class=" space-y-4 max-sm:mx-auto shadow-lg rounded-lg">
+        <img src="./assets/img2.png" alt="">
+       </div>
+      </div>
+      <div class="lg:w-5/6 mx-auto justify-evenly flex max-sm:flex-col mb-4 ">
+        <div class="lg:w-1/5 shadow-xl rounded-lg items-center justify-evenly  max-sm:space-y-8 max-sm:mx-auto">
+          <img src="./assets/img3.png" alt="">
+        </div>
+        <div class="lg:w-3/5 flex justify-center items-center shadow-lg rounded-lg max-sm:flex-col max-sm:space-y-4 max-sm:mx-auto">
+          <img src="./assets/img4.png" alt="">
+          <div>
+          <h1 class="font-bold text-left pl-4">Commercial</h1>
+          <p class="text-left pl-4"> The barn house captivates with its blend of rustic charm <br> and modern. The barn house captivates with its blend of <br> rustic charm and modern .</p>
+          <button class="bg-neutral-50 text-left px-2 font-bold flex rounded-2xl items-center gap-2 justify-start">
+          <p class="text-black pl-2">View Details</p>
+          <i class="fa-solid fa-arrow-right bg-[#ABEF5F] rounded-full px-2 py-2 -rotate-45 text-black"></i>
+          </button>
+          </div>
+          <div class="lg:w-2/5 shadow-lg rounded-lg m-6 max-sm:space-y-4 max-sm:mx-auto">
+            <img src="./assets/img5.png" alt="">
+          </div>
+        </div>
+      </div>
+      </section>
+
       <section>
         <div class="bg-cover" style="background-image: url('./assets/bg.jpg'); height: 720px;">
           <button class="bg-[#ABEF5F33] text-center px-2 py-1 font-bold flex rounded-2xl mx-auto items-center gap-2 my-4">
